[package]
name = "habitat_core"
version = "0.0.0"
authors = ["Adam Jacob <adam@chef.io>", "Jamie Winsor <reset@chef.io>", "Fletcher Nichol <fnichol@chef.io>", "Joshua Timberman <joshua@chef.io>", "Dave Parfitt <dparfitt@chef.io>", "Steven Murawski <smurawski@chef.io>"]
workspace = "../../"
build = "build.rs"

[build-dependencies]
base64 = "*"
gcc = "0.3"

[dependencies]
actix-web = { version = "*", default-features = false }
ansi_term = "*"
clippy = {version = "*", optional = true}
base64 = "*"
dirs = "*"
errno = "*"
# The handlebars crate has a few issues that require us to lock at 0.28.3
# until further notice.
#
# - 0.30.0 bumps to a version of the `pest` crate that fails to build
#   on Windows.
# - 0.29.0 makes a change to array processing that is incompatible
#   with our templating syntax; we use "foo[0]", but it now requires
#   "foo.[0]"
#   See https://github.com/sunng87/handlebars-rust/commit/707f05442ef6f441a1cfc6b13ac180b78cb296db
handlebars = { version = "= 0.28.3", default-features = false }
hex = "*"
lazy_static = "*"
libarchive = "*"
libc = "*"
libsodium-sys = "0.0.16"
log = "*"
rand = "*"
regex = "*"
rust-crypto = "*"
serde = "*"
serde_derive = "*"
serde_json = "*"
serde-transcode = "*"
serde_yaml = "*"
sodiumoxide = "0.0.16"
tempfile = "*"
time = "*"
toml = { version = "*", default-features = false }
typemap = "*"
url = "*"
valico = "*"

[target.'cfg(not(windows))'.dependencies]
users = "*"

[target.'cfg(target_os = "linux")'.dependencies]
caps = "*"

[target.'cfg(windows)'.dependencies]
ctrlc = "*"
habitat_win_users = { path = "../win-users" }
widestring = "*"
winapi = { version = "*", features = ["dpapi", "ioapiset", "namedpipeapi", "userenv", "winbase", "wincrypt", "winerror"] }
windows-acl = "*"

[dev-dependencies]
hyper = "0.10"
json = "*"

[features]
default = []
functional = []
