[package]
name = "habitat_http_client"
version = "0.0.0"
authors = ["Adam Jacob <adam@chef.io>", "Jamie Winsor <reset@chef.io>", "Fletcher Nichol <fnichol@chef.io>", "Joshua Timberman <joshua@chef.io>", "Dave Parfitt <dparfitt@chef.io>"]
build = "build.rs"
workspace = "../../"

[dependencies]
clippy = {version = "*", optional = true}
base64 = "*"
log = "*"
httparse = "*"
# Pending upgrade activities in https://github.com/habitat-sh/core/issues/72
hyper = "0.10"
# Pending upgrade activities in https://github.com/habitat-sh/core/issues/72
hyper-openssl = "0.2"
# Pending upgrade activities in https://github.com/habitat-sh/core/issues/72
openssl = "0.9.23"
serde = "*"
serde_json = "*"
url = "*"

[dependencies.habitat_core]
path = "../core"

[features]
default = []
functional = []
